# Auth-App

client/: index.html  package-lock.json  package.json
client/src/components/: Header.jsx  Navbar.jsx
client/src/context/: AppContext.jsx
client/src/pages/: EmailVerify.jsx  Login.jsx  ResetPassword.jsx
dj_server/: db.sqlite3  main.py  pyproject.toml
dj_server/core/: .env  settings.py  urls.py
dj_server/users/: email_views.py  models.py  serializers.py  urls.py  views.py
dj_server/users/migrations/: 0001_initial.py
server/: package-lock.json  package.json  server.js
server/config/: nodemailer.js
server/controllers/: authController.js
server/middleware/: userAuth.js
server/models/: userModel.js
server/routes/: authRoutes.js
